starting to implement db
